Article Items desktop gap fix

--- a/frontend/components/ArticlesList/index.module.scss
+++ b/frontend/components/ArticlesList/index.module.scss
@@ -44,3 +44,16 @@
 .spinnerWrapper {
   padding-top: $gapS;
 }
+
+.dummyItem {
+  display: none;
+
+  @media only screen and (min-width: $desktop) {
+    width: calc(33.33% - 8px);
+    display: flex;
+  }
+
+  @media only screen and (max-width: $mobile)  {
+    display: none;
+  }
+}
